--- a/src/main.css
+++ b/src/main.css
@@ -49,17 +49,6 @@ html {
 .page-wrapper {
   background-color: var(--lighter);
 }
-/* .page-wrapper:before {
-  z-index: 1;
-  content: '';
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: var(--dark);
-  -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 100%);
-  clip-path: polygon(0% 0%, 0% 100%, 100% 100%);
-} */
 
 .intro-text {
   display: flex;
@@ -116,14 +105,9 @@ h3 {
   height: 100%;
   width: 100%;
   margin: 40px 0;
-  /* background-image: url('../images/bg/bg.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; */
   position: relative;
 }
 
-/* just for tailwind */
 .bg-dark-gradient {
   background: linear-gradient(125.17deg, #130a0a 0%, #221e52 100%);
   filter: blur(90px);
@@ -168,18 +152,6 @@ h3 {
   height: 100%;
   position: absolute;
   z-index: 0;
-}
-
-.overlay__img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 400px;
-  width: 400px;
-  opacity: 0.1;
-  border-radius: 100%;
-  z-index: 1;
-  background: var(--black-gradient);
 }
 
 .card {
@@ -247,12 +219,8 @@ h3 {
 }
 
 .platforma .gpg-otr {
-  /* visibility: hidden; */
   display: flex;
   gap: 10px;
-  /* position: absolute;
-  bottom: -30px;
-  right: 0; */
   font-size: clamp(0.82rem, 3vw, 1rem);
 }
 
@@ -263,23 +231,19 @@ h3 {
   border-radius: 5px;
 }
 
-/* .platforma:hover .gpg-otr { */
-/* display: block; */
-/* visibility: visible; */
-
-/* border: var(--light-solid-b);
-  transform: scale(1.05);
-  box-shadow: var(--hover-shadow-l); */
-/* } */
-
 .platforme {
-  /* background-color: var(--lighter); */
   background-color: transparent;
   z-index: 5;
 }
 
 .platforme .icon {
   width: 40px;
+}
+
+.naslov-tutoriala {
+  color: var(--dark);
+}
+.podnaslovi {
 }
 
 .about-us {
@@ -301,8 +265,8 @@ h3 {
   color: var(--dark);
 }
 
-.kontakt li img {
-  width: 40px;
+.kontakt > li {
+  font-size: clamp(1.3rem, 3vw, 2rem);
 }
 
 .dogadjaji {
@@ -337,7 +301,8 @@ h3 {
   color: var(--lighter);
   background-color: var(--dark);
   opacity: 0.6;
-
+  width: 100%;
+  margin: auto;
   padding: 5px;
   font-size: clamp(0.42rem, 2vw, 0.86rem);
 }
@@ -416,7 +381,7 @@ h3 {
 
 .nav > .nav-header > .nav-title {
   padding: 5px;
-  max-width: 160px;
+  max-width: 120px;
 }
 
 .nav > .nav-header > .nav-title img {
@@ -437,8 +402,6 @@ h3 {
   align-items: flex-start;
   font-size: 18px;
   text-transform: uppercase;
-  /* border-bottom: 1px solid var(--dark); */
-  /* border-left: 1px solid var(--dark); */
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
   border-radius: 6px;
   background-color: rgba(38, 35, 36, 1);
@@ -466,7 +429,7 @@ h3 {
   height: 30px;
 }
 
-.nav > .nav-links > a:hover {
+.nav > .nav-links > a:not(.active):hover {
   background-color: rgba(0, 0, 0, 1);
   color: var(--light);
 }
@@ -490,10 +453,7 @@ h3 {
     padding: 13px;
     cursor: pointer;
   }
-  .nav > .nav-btn > label:hover,
-  .nav #nav-check:checked ~ .nav-btn > label {
-    background-color: rgba(0, 0, 0, 0.3);
-  }
+
   .nav > .nav-btn > label > span {
     display: block;
     width: 25px;
@@ -507,7 +467,6 @@ h3 {
     align-items: center;
     justify-content: center;
     width: 100%;
-    /* background-color: var(--lighter); */
     transition: all 0.3s ease-in;
     overflow: hidden;
     border: none;
@@ -545,8 +504,8 @@ h3 {
   background: var(--dark);
   border-radius: 5rem;
   padding: 0.5rem;
-  height: 2.5rem;
-  width: 5rem;
+  height: 2rem;
+  width: 4rem;
   font-size: 1.5rem;
   transition: background 0.5s ease;
   cursor: pointer;
@@ -559,14 +518,14 @@ h3 {
   border-radius: 50%;
   top: 0.25rem;
   left: 0.25rem;
-  height: 2rem;
-  width: 2rem;
+  height: 1.5rem;
+  width: 1.5rem;
   transform: translateX(0);
   transition: transform 0.3s ease, background-color 0.5s ease;
 }
 
 .checkbox-theme:checked ~ * .label .ball {
-  transform: translateX(2.5rem);
+  transform: translateX(2rem);
 }
 
 .checkbox-theme:checked + .page-wrapper {
@@ -584,14 +543,14 @@ h3 {
 }
 
 .tut-text-container {
-  /* background-color: #dadada; */
-  /* padding: 0 1rem; */
   color: var(--dark);
   padding: 0 60px;
+  scroll-behavior: smooth;
 }
 
 .tut-text-container img {
-  width: 100%;
+  width: 80%;
+  margin: auto;
   margin-top: 1rem;
 }
 
@@ -600,6 +559,12 @@ h3 {
   font-size: 26px;
   margin: 10px 20px 0 20px;
 }
+
+.tut-text-container .slika-detalji {
+  width: 80%;
+  margin-bottom: 2rem;
+}
+
 .tut-title {
   margin-left: 1rem;
   margin-bottom: 2rem;
@@ -617,7 +582,80 @@ h3 {
   margin: 0 100px;
 }
 
+/* dropdown */
+
+#dd ul {
+  display: none;
+  position: relative;
+  top: -55px;
+  padding: 55px 0 0 0;
+  margin: 0;
+}
+#dd ul:hover {
+  display: block;
+}
+#dd ul li {
+  background: var(--lighter);
+  color: var(--dark);
+  padding: 10px;
+  list-style: none;
+}
+#dd ul li:hover {
+  background: var(--dark);
+  color: var(--lighter);
+  cursor: pointer;
+}
+#button {
+  display: inline-block;
+  padding: 10px;
+  background: var(--dark);
+  color: var(--lighter);
+}
+#dd {
+  display: inline-block;
+}
+#dd:active ul {
+  display: block;
+}
+#dd:aactive ul:hover {
+  display: block;
+}
+#dd:active #button {
+  display: inline-block;
+  padding: 10px;
+  background: #ccc;
+  color: white;
+}
+
+#dd {
+  display: none;
+}
+/* dropdown */
+
+/* aside */
+.podnaslovi {
+  background-color: var(--lighter);
+  color: var(--dark);
+}
+.podnaslovi li a {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.podnaslovi a:active {
+  background-color: var(--dark);
+  color: var(--light);
+}
 @media (max-width: 768px) {
+  #dd {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .aside {
+    display: none;
+  }
   .intro-text {
     flex-direction: column;
   }
@@ -625,7 +663,7 @@ h3 {
     line-height: 2.4rem;
   }
   .nav > .nav-header > .nav-title {
-    max-width: 100px;
+    max-width: 80px;
   }
   .label {
     height: 2rem;
